# -Audio-and-video-learning

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
01_ffmpeg/: 01_ffmpeg_demux.c  02_extract_aac.c  03_extract_h264.c  05_decode_audio.c  06_decode_video.c  07_demux_mp4.c  08_avio_decod_aac.c  09_01_audio_resample.c  10_encode_audio.c  11_encode_video.c  12_muxing_flv.c  14_filter_video.c  CMakeLists.txt  README.md
01_ffmpeg/04-flv_parser_cplus/: CMakeLists.txt  FlvMetaData.h
01_ffmpeg/09_02_audio_resample/: CMakeLists.txt  audioresampler.c  main.c
01_ffmpeg/12_mp4_muxer/: CMakeLists.txt
01_ffmpeg/13_mp4_muxer/: CMakeLists.txt  audioencoder.cc  audioencoder.h  audioresampler.h  main.cc  muxer.cc  muxer.h  videoencoder.cc  videoencoder.h
01_ffmpeg/15_audio_mix/: CMakeLists.txt  main.cc
01_ffmpeg/doc/: ffmpeg_base.md  ffmpeg_encode.md  ffmpeg_filter.md  ffmpeg_mutex_decode.md  ffmpeg_struct.md
02_ffplay/: CMakeLists.txt  README.md
02_ffplay/ffplay_pro/: CMakeLists.txt  cmdutils.c  config.h  ffplay.c
